# template-filler-tui

./: .gitignore  README.md  pyproject.toml
docs/: 00_phase_0_situation_assessment_session.md  01_proposed_tui_solution.md  02_implementation_plan.md  template_filler.py
template_filler_tui/: __main__.py  app.py  app.tcss  config.py
template_filler_tui/data/: memory.json
template_filler_tui/models/: memory.py  methodology.py  placeholder.py
template_filler_tui/screens/: content_preview.py  session_setup.py  step_browser.py  template_fill.py  unregistered_warning.py
