[project]
name = "template-filler-tui"
version = "0.1.0"
description = "TUI for filling placeholder-based prompt templates from the Tailoring Methodology"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
template-filler = "template_filler_tui.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
